# sanic-restful

./: .pre-commit-config.yaml  conf.ini  pyproject.toml  readme.md  requirements.txt  router.py  settings.py  start.py  test.sh
apps/articles/: models.py  router.py  views.py
apps/resouces/regions/: models.py
apps/resouces/zones/: models.py
apps/resources/regions/: models.py  router.py  views.py
apps/resources/zones/: models.py  router.py  views.py
apps/users/: models.py  router.py  views.py
common/: logger.py
common/base/: authentications.py  base_model.py  base_view.py  blueprint.py  execptions.py  pagenation.py
common/internal/: sso.py
deploy/: deploy.md
libs/: action.py  consul.py  convert.py  encoder.py  import_export.py  logrotate.py  send_mail.py
