[tool.poetry]
name = "app"
version = "1.0.6+af1e1c6"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^2.20.0"
aiofiles = "0.7.0"
aiomysql = "0.0.21"
aiosqlite = "0.16.1"
amqp = "5.0.6"
appdirs = "1.4.4"
asgiref = "3.3.4"
atlastk = "0.12.10"
attrs = "21.2.0"
automat = "20.2.0"
beautifulsoup4 = "4.9.3"
billiard = "3.6.4.0"
boto3 = "1.18.33"
botocore = "1.21.33"
brotli = "1.0.9"
celery = "5.1.1"
certifi = "2018.1.18"
cffi = "1.14.5"
chardet = "3.0.4"
click = "7.1.2"
click-didyoumean = "0.0.3"
click-plugins = "1.1.1"
click-repl = "0.2.0"
constantly = "15.1.0"
coreapi = "2.3.3"
coreschema = "0.0.4"
cryptography = "3.4.7"
cssselect = "1.1.0"
diff-match-patch = "20200713"
distlib = "0.3.2"
filelock = "3.0.12"
flask = "2.0.1"
flask-compress = "1.10.1"
flask-sqlalchemy = "2.5.1"
furl = "2.1.2"
hyperlink = "21.0.0"
idna = "2.6"
incremental = "21.3.0"
iso8601 = "0.1.16"
itsdangerous = "2.0.1"
itypes = "1.2.0"
jinja2 = "3.0.1"
jmespath = "0.10.0"
json2html = "1.3.0"
kombu = "5.1.0"
logparser = "0.8.2"
markupsafe = "2.0.1"
multidict = "5.1.0"
openapi-codec = "1.3.2"
orderedmultidict = "1.0.1"
parsel = "1.6.0"
pbr = "5.6.0"
pexpect = "4.8.0"
prompt-toolkit = "3.0.19"
protego = "0.1.16"
ptyprocess = "0.7.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.20"
pydispatcher = "2.0.5"
pyee = "8.1.0"
pymongo = "3.11.4"
pymysql = "0.9.3"
pyopenssl = "20.0.1"
pypika-tortoise = "0.1.1"
pypinyin = "0.36.0"
pyppeteer = "0.2.5"
pyquery = "1.4.3"
python-consul = "1.1.0"
python-crontab = "2.2.8"
python-dateutil = "2.8.2"
python-docx = "0.8.6"
python-scrapyd-api = "2.1.2"
pytz = "2017.3"
queuelib = "1.6.1"
redis = "3.5.3"
s3transfer = "0.5.0"
sanic-auth = "0.3.0"
sanic-routing = "0.7.1"
scrapy = "1.8.0"
scrapy-redis = "0.7.1"
scrapy-splash = "0.7.2"
scrapydweb = "^1.4.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "^v(?P<base>\\d+\\.\\d+\\.\\d+)$"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_semver(base) }}
    {%- elif revision is not none -%}
        {{ serialize_semver(base,[revision], metadata=[commit]) }}
    {%- else -%}
        {{ serialize_semver(bump_version(base), metadata=[commit]) }}
    {%- endif -%}
"""
bump = true
tag-branch="dev"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
dev = "app.dev:start"
shell = "app.cli:shell"
